# Medusa

./: .gitignore  CMakeLists.txt  CP1.h  Makefile  MedusaGuide.txt  README  cktypes.cc  cktypes.h  complex.h  draw_pb_sphere.cc  drawpullback.cc  dynarray.C  dynarray.h  find_matings.cc  generate_graphics.ps1  generate_graphics.sh  iomanip.h  iostream.h  mate_interact.cc  medusa_A.cc  medusa_B.h  psoop.cc  psoop.h  spider.cc  spider.cc.old  spider.h
notebooks/: medusa_python_showcase.ipynb
python/: generate_graphics.py  mate_interact_py.py  medusa_full.py  medusa_modern.py  test_medusa_modern.py
src/: complex.h  draw_pb_sphere.cc  drawpullback.cc  dynarray.C  dynarray.h  find_matings.cc  fstream.h  medusa.h  medusa_A.cc  medusa_A.h  medusa_B.cc  medusa_B.h  psoop.cc  psoop.h
